fixed MIS module decomposition

--- a/docs/Design/SoftDetailedDes/MIS.tex
+++ b/docs/Design/SoftDetailedDes/MIS.tex
@@ -134,17 +134,15 @@ The following table is taken directly from the Module Guide document for this pr
     \textbf{Level 1}        & \textbf{Level 2}        &\textbf{Level 3} \\
     \midrule
 
-    \multirow{9}{0.3\textwidth} {Hardware-Hiding Module}              & Battery Management       & Battery\\
+    \multirow{6}{0.3\textwidth} {Hardware-Hiding Module}              & Battery Management       & Battery\\
 \cline{2-3}
 					                                                          &  \multirow{2}{0.3\textwidth}{Data Storage}        & microSD     \\
-																		&			&Database\\
+																		&			&Local Database\\
 \cline{2-3}
-					                                                          & \multirow{3}{0.3\textwidth}{Sensor Array}         & Sensor Reading    \\
+					                                                          & \multirow{2}{0.3\textwidth}{Sensor Array}         & Reading Sensor    \\
 																		&			& Sensor Data Processing \\
-																		&			& Sensor Prompt Validity \\ 
 \cline{2-3}
-												  & \multirow{2}{0.3\textwidth}{Physical Design} & Watch Straps \\
-																		&			& Watch Case \\
+												  & \multirow{1}{0.3\textwidth}{Physical Design} & Watch Case and Straps \\
 
     \midrule
 
@@ -157,11 +155,9 @@ The following table is taken directly from the Module Guide document for this pr
 
     \midrule
 
-    \multirow{4}{0.3\textwidth}{Software Decision Module} &  \multirow{2}{0.3\textwidth}{Parameter Selection}& Create New User\\
-																		&			& Configuration \\
+    \multirow{2}{0.3\textwidth}{Software Decision Module} &  \multirow{1}{0.3\textwidth}{Parameter Selection}& Configuration\\
 \cline{2-3}
-                                                          & \multirow{2}{0.3\textwidth}{Data Processing}       & Graph  \\
-											&			& Data Display \\
+                                                          & \multirow{1}{0.3\textwidth}{Data Processing}       & Graph  \\
 
     \bottomrule
   \end{tabular}
